--- a/DM.MovieApi.IntegrationTests/DM.MovieApi.IntegrationTests.csproj
+++ b/DM.MovieApi.IntegrationTests/DM.MovieApi.IntegrationTests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="MovieDb\Companies\ApiCompanyRequestTests.cs" />
     <Compile Include="MovieDb\Genres\ApiGenreRequestTests.cs" />
     <Compile Include="MovieDb\Movies\ApiMovieRequestTests.cs" />
+    <Compile Include="MovieDb\Movies\ApiMovieRequestTests_GetCredits.cs" />
     <Compile Include="MovieDb\Professions\ApiProfessionRequestTests.cs" />
     <Compile Include="AssemblyInit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
