Adding in populated genres when search tv shows by name.  Created an extensions class to contain extension methods for populating genres on both MovieInfo and TVShowInfo.  Updated TVShowInfo to match MovieInfo on property access levels so that they remain consistent.  Added tests for TV show api to ensure genres are getting appropriately populated.

--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -79,6 +79,7 @@
     <Compile Include="MovieDb\Companies\ProductionCompanyInfo.cs" />
     <Compile Include="MovieDb\Configuration\IApiConfigurationRequest.cs" />
     <Compile Include="MovieDb\Genres\GenreFactory.cs" />
+    <Compile Include="MovieDb\Genres\GenreIdCollectionMappingExtensions.cs" />
     <Compile Include="MovieDb\Genres\IApiGenreRequest.cs" />
     <Compile Include="MovieDb\Country.cs" />
     <Compile Include="MovieDb\IndustryProfessions\ApiProfessionRequest.cs" />
@@ -96,7 +97,6 @@
     <Compile Include="MovieDb\Language.cs" />
     <Compile Include="MovieDb\Movies\Movie.cs" />
     <Compile Include="MovieDb\Movies\MovieInfo.cs" />
-    <Compile Include="MovieDb\Movies\MovieInfoExtensions.cs" />
     <Compile Include="MovieDb\TV\ApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\IApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\Network.cs" />
