--- a/TheMovieDbWrapper.nuspec
+++ b/TheMovieDbWrapper.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TheMovieDbWrapper</id>
-    <version>0.5</version>
+    <version>0.5.1</version>
     <title>TheMovieDb.org Wrapper</title>
     <authors>Kindler Chase</authors>
     <owners>Kindler Chase</owners>
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/nCubed/TheMovieDbWrapper</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# wrapper for common requests against themoviedb.org API.</description>
-    <releaseNotes>Added ability to search TV and Movies; added popular TV and Movies.</releaseNotes>
+    <releaseNotes>Minor update to correct underlying type for Movie.Revenue (int to decimal).</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Movie Movies themoviedb TMDB Film TV Television</tags>
     <dependencies>
