--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -99,6 +99,10 @@
     <Compile Include="MovieDb\Language.cs" />
     <Compile Include="MovieDb\Movies\Movie.cs" />
     <Compile Include="MovieDb\Movies\MovieInfo.cs" />
+    <Compile Include="MovieDb\People\Gender.cs" />
+    <Compile Include="MovieDb\People\IApiPeopleRequest.cs" />
+    <Compile Include="MovieDb\People\Person.cs" />
+    <Compile Include="MovieDb\People\PersonCredit.cs" />
     <Compile Include="MovieDb\TV\ApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\IApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\Network.cs" />
