--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -91,7 +91,8 @@
     <Compile Include="MovieDb\People\Gender.cs" />
     <Compile Include="MovieDb\People\IApiPeopleRequest.cs" />
     <Compile Include="MovieDb\People\Person.cs" />
-    <Compile Include="MovieDb\People\PersonCredit.cs" />
+    <Compile Include="MovieDb\People\PersonMovieCredit.cs" />
+    <Compile Include="MovieDb\People\PersonTVCredit.cs" />
     <Compile Include="MovieDb\TV\ApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\IApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\Network.cs" />
