--- a/TheMovieDbWrapper.nuspec
+++ b/TheMovieDbWrapper.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TheMovieDbWrapper</id>
-    <version>0.7.2</version>
+    <version>0.8.0</version>
     <title>TheMovieDb.org Wrapper</title>
     <authors>Kindler Chase</authors>
     <owners>Kindler Chase</owners>
@@ -10,8 +10,7 @@
     <projectUrl>https://github.com/nCubed/TheMovieDbWrapper</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# wrapper for common requests against themoviedb.org API.</description>
-    <releaseNotes>Extended NewtonSoft.IsoDateTimeConverter to allow partial dates; fallback to default(DateTime) when date is malformed and supress the exception. During debug, the date value being parsed will be emitted to the Trace log.
-.</releaseNotes>
+    <releaseNotes>Migrated project to .netstandard to support Cross-Platform Applications, i.e., Android, IOS, and all flavors of .NET. Minor breaking change, re: IMovieDbApi is currently not supported, but will support in the future.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Movie Movies themoviedb themoviedb.org TMDB Film TV Television</tags>
     <dependencies>
@@ -19,8 +18,8 @@
     </dependencies>
   </metadata>
     <files>
-        <file src="DM.MovieApi\bin\Release\DM.MovieApi.dll" target="lib\net45" />
-        <file src="DM.MovieApi\bin\Release\DM.MovieApi.pdb" target="lib\net45" />
-        <file src="DM.MovieApi\bin\Release\DM.MovieApi.xml" target="lib\net45" />
+        <file src="DM.MovieApi\bin\Release\DM.MovieApi.dll" target="lib\netstandard1.1\DM.MovieApi.dll" />
+        <file src="DM.MovieApi\bin\Release\DM.MovieApi.pdb" target="lib\netstandard1.1\DM.MovieApi.pdb" />
+        <file src="DM.MovieApi\bin\Release\DM.MovieApi.xml" target="lib\netstandard1.1\DM.MovieApi.xml" />
     </files>
 </package>
