--- a/TheMovieDbWrapper.nuspec
+++ b/TheMovieDbWrapper.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TheMovieDbWrapper</id>
-    <version>0.8.0</version>
+    <version>0.8.1</version>
     <title>TheMovieDb.org Wrapper</title>
     <authors>Kindler Chase</authors>
     <owners>Kindler Chase</owners>
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/nCubed/TheMovieDbWrapper</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# wrapper for common requests against themoviedb.org API.</description>
-    <releaseNotes>Migrated project to .netstandard to support Cross-Platform Applications, i.e., Android, IOS, and all flavors of .NET. Minor breaking change, re: IMovieDbApi is currently not supported, but will support in the future.</releaseNotes>
+    <releaseNotes>v0.8.1: Minor update to resolve Runtime error in a Xamarin.UWP project. v0.8.0: Migrated project to .netstandard to support Cross-Platform Applications, i.e., Android, IOS, and all flavors of .NET. Minor breaking change, re: IMovieDbApi is currently not supported, but will support in the future.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Movie Movies themoviedb themoviedb.org TMDB Film TV Television</tags>
     <dependencies>
