--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MovieDb\Genres\GenreFactory.cs" />
     <Compile Include="MovieDb\Genres\GenreIdCollectionMappingExtensions.cs" />
     <Compile Include="MovieDb\Genres\IApiGenreRequest.cs" />
+    <Compile Include="MovieDb\Images\ImagesConverter.cs" />
     <Compile Include="MovieDb\IndustryProfessions\ApiProfessionRequest.cs" />
     <Compile Include="MovieDb\IndustryProfessions\IApiProfessionRequest.cs" />
     <Compile Include="MovieDb\IndustryProfessions\Profession.cs" />
@@ -90,8 +91,7 @@
     <Compile Include="MovieDb\People\PersonInfo.cs" />
     <Compile Include="MovieDb\People\PersonMovieCredit.cs" />
     <Compile Include="MovieDb\People\PersonTVCredit.cs" />
-    <Compile Include="MovieDb\Shared\Image.cs" />
-    <Compile Include="MovieDb\Shared\Images.cs" />
+    <Compile Include="MovieDb\Image.cs" />
     <Compile Include="MovieDb\TV\ApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\IApiTVShowRequest.cs" />
     <Compile Include="MovieDb\TV\Network.cs" />
