--- a/TheMovieDbWrapper.nuspec
+++ b/TheMovieDbWrapper.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>TheMovieDbWrapper</id>
-    <version>0.8.2</version>
+    <version>0.8.3</version>
     <title>TheMovieDb.org Wrapper</title>
     <authors>Kindler Chase</authors>
     <owners>Kindler Chase</owners>
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/nCubed/TheMovieDbWrapper</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# wrapper for common requests against themoviedb.org API will full support for standard and portable libraries.</description>
-    <releaseNotes>v0.8.2: Minor update to include the raw JSON returned from themoviedb.org query.</releaseNotes>
+    <releaseNotes>v0.8.3: Adding find movie by IMDB id feature.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Movies Movie themoviedb themoviedb.org TMDB Film TV Television</tags>
     <dependencies>
