Convert solution/projects to VS 2019 and .netstandard
Microsoft is no longer recommending PCL (portable class libraries) and recommend going with a .netstandard 2.0 library. Make it so.

--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -1,111 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EEA7946A-DB5A-4DD8-8059-CC28C69967C5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DM.MovieApi</RootNamespace>
-    <AssemblyName>DM.MovieApi</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\DM.MovieApi.xml</DocumentationFile>
-  </PropertyGroup>
+
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="project.json" />
+    <Compile Remove="MovieDbApi.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="ApiRequest\ApiRequestBase.cs" />
-    <Compile Include="ApiRequest\IApiRequest.cs" />
-    <Compile Include="ApiRequest\IsoDateTimeConverterEx.cs" />
-    <Compile Include="ApiResponse\ApiError.cs" />
-    <Compile Include="ApiResponse\ApiQueryResponse.cs" />
-    <Compile Include="ApiResponse\ApiResponseBase.cs" />
-    <Compile Include="ApiResponse\ApiSearchResponse.cs" />
-    <Compile Include="ApiResponse\TmdbStatusCode.cs" />
-    <Compile Include="IMovieDbApi.cs" />
-    <Compile Include="IMovieDbSettings.cs" />
-    <Compile Include="MovieDbFactory.cs" />
-    <Compile Include="MovieDb\Certifications\ApiMovieRatingRequest.cs" />
-    <Compile Include="MovieDb\Certifications\IApiMovieRatingRequest.cs" />
-    <Compile Include="MovieDb\Certifications\MovieRatings.cs" />
-    <Compile Include="MovieDb\Collections\CollectionInfo.cs" />
-    <Compile Include="MovieDb\Companies\ApiCompanyRequest.cs" />
-    <Compile Include="MovieDb\Companies\IApiCompanyRequest.cs" />
-    <Compile Include="MovieDb\Companies\ParentCompany.cs" />
-    <Compile Include="MovieDb\Companies\ProductionCompany.cs" />
-    <Compile Include="MovieDb\Companies\ProductionCompanyInfo.cs" />
-    <Compile Include="MovieDb\Configuration\ApiConfiguration.cs" />
-    <Compile Include="MovieDb\Configuration\ApiConfigurationRequest.cs" />
-    <Compile Include="MovieDb\Configuration\IApiConfigurationRequest.cs" />
-    <Compile Include="MovieDb\Configuration\ImageConfiguration.cs" />
-    <Compile Include="MovieDb\Country.cs" />
-    <Compile Include="MovieDb\Genres\ApiGenreRequest.cs" />
-    <Compile Include="MovieDb\Genres\Genre.cs" />
-    <Compile Include="MovieDb\Genres\GenreFactory.cs" />
-    <Compile Include="MovieDb\Genres\GenreIdCollectionMappingExtensions.cs" />
-    <Compile Include="MovieDb\Genres\IApiGenreRequest.cs" />
-    <Compile Include="MovieDb\IndustryProfessions\ApiProfessionRequest.cs" />
-    <Compile Include="MovieDb\IndustryProfessions\IApiProfessionRequest.cs" />
-    <Compile Include="MovieDb\IndustryProfessions\Profession.cs" />
-    <Compile Include="MovieDb\Keywords\Keyword.cs" />
-    <Compile Include="MovieDb\Keywords\KeywordConverter.cs" />
-    <Compile Include="MovieDb\Language.cs" />
-    <Compile Include="MovieDb\Movies\ApiMovieRequest.cs" />
-    <Compile Include="MovieDb\Movies\IApiMovieRequest.cs" />
-    <Compile Include="MovieDb\Movies\Movie.cs" />
-    <Compile Include="MovieDb\Movies\MovieCredit.cs" />
-    <Compile Include="MovieDb\Movies\MovieInfo.cs" />
-    <Compile Include="MovieDb\People\ApiPeopleRequest.cs" />
-    <Compile Include="MovieDb\People\Gender.cs" />
-    <Compile Include="MovieDb\People\IApiPeopleRequest.cs" />
-    <Compile Include="MovieDb\People\Person.cs" />
-    <Compile Include="MovieDb\People\PersonInfo.cs" />
-    <Compile Include="MovieDb\People\PersonMovieCredit.cs" />
-    <Compile Include="MovieDb\People\PersonTVCredit.cs" />
-    <Compile Include="MovieDb\TV\ApiTVShowRequest.cs" />
-    <Compile Include="MovieDb\TV\IApiTVShowRequest.cs" />
-    <Compile Include="MovieDb\TV\Network.cs" />
-    <Compile Include="MovieDb\TV\Season.cs" />
-    <Compile Include="MovieDb\TV\TVShow.cs" />
-    <Compile Include="MovieDb\TV\TVShowCreator.cs" />
-    <Compile Include="MovieDb\TV\TVShowInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shims\CollectionExtensions.cs" />
-    <Compile Include="Shims\ImportingConstructorAttribute.cs" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
