--- a/DM.MovieApi.IntegrationTests/DM.MovieApi.IntegrationTests.csproj
+++ b/DM.MovieApi.IntegrationTests/DM.MovieApi.IntegrationTests.csproj
@@ -1,12 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>DM.MovieApi.IntegrationTests</AssemblyName>
-
     <RootNamespace>DM.MovieApi.IntegrationTests</RootNamespace>
   </PropertyGroup>
 
