--- a/DM.MovieApi/DM.MovieApi.csproj
+++ b/DM.MovieApi/DM.MovieApi.csproj
@@ -9,7 +9,7 @@
 
   <PropertyGroup>
     <PackageId>TheMovieDbWrapper</PackageId>
-    <Version>1.3.0</Version>
+    <Version>1.3.1</Version>
     <Authors>Kindler Chase</Authors>
     <Company>nCubed</Company>
     <Product>TheMovieDb.org Wrapper</Product>
@@ -18,11 +18,11 @@
     <PackageProjectUrl>https://github.com/nCubed/TheMovieDbWrapper</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Movies Movie themoviedb themoviedb.org TMDB Film TV Television Actor Acress Director IMDB</PackageTags>
-    <PackageReleaseNotes>v1.3.0 adds support for movie recommendations and movie discovery. See v1.0.x release notes for a minor breaking change from releases &lt; 1.0.</PackageReleaseNotes>
+    <PackageReleaseNotes>v1.3.x adds support for movie recommendations and movie discovery. See v1.0.x release notes for a minor breaking change from releases &lt; 1.0.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/nCubed/TheMovieDbWrapper</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-    <FileVersion>1.3.0.0</FileVersion>
+    <AssemblyVersion>1.3.1.0</AssemblyVersion>
+    <FileVersion>1.3.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
